--- a/css/borehole.css
+++ b/css/borehole.css
@@ -1,13 +1,80 @@
-
 .borehole-img {
     width: 30rem;
     height: 30rem;
-    background-image: url("../../img/borehole/hero-image.png");
+    background-image: url("../img/borehole/hero-image.png");
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
     animation: liquid 8s linear infinite alternate;
     border: none;
+}
+
+/* Borehole Card */
+.card-info {
+    display: none;
+}
+.card-info:first-child {
+    display: block;
+}
+.bore-card {
+    border-radius: 24px;
+    border: 1px solid #D7D7D7;
+    background: #F6F5F5;
+    padding: 40px 60px;
+    height: 80vh;
+}
+.bore-card.image {
+    padding: 40px 16px;
+}
+.bore-card.image img {
+    width: 100%;
+    height: 100%;
+}
+.bore-card .card-tabs {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 16px;
+    margin-bottom: 64px;
+}
+.bore-card .card-tabs .btn-bore {
+    color: var(--text-accent);
+    background-color: var(--color-white);
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    display: flex;
+    padding: 8px 16px;
+    align-items: center;
+    gap: 12px;
+    border-radius: 24px;
+    opacity: 0.4;
+}
+.bore-card .card-tabs .btn-bore.active {
+    opacity: 1;
+}
+
+.bore-card .card-info .icon {
+    border-radius: 50%;
+    background: var(--color-white);
+    margin-bottom: 24px;
+    display: flex;
+    width: 64px;
+    height: 64px;
+    justify-content: center;
+    align-items: center;
+}
+.bore-card .card-info h3 {
+    color: var(--text-accent);
+    font-size: 24px;
+    font-weight: 600;
+}
+.bore-card .card-info p {
+    color: var(--colors-text, #333);
+    font-size: 18px;
+    line-height: 150%;
+    margin-top: 8px;
 }
 
 .what_is_that {
@@ -56,7 +123,7 @@
     height: 20rem;
     border: 0.5px solid #858585;
     border-radius: 24px;
-    background-image: url(./img/wit1.png);
+    background-image: url('../img/borehole/wit1.png');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -67,7 +134,7 @@
     height: 20rem;
     border: 0.5px solid #858585;;
     border-radius: 24px;
-    background-image: url(./img/wit2.png);
+    background-image: url('../img/borehole/wit1.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
