--- a/css/detailes.css
+++ b/css/detailes.css
@@ -14,12 +14,12 @@
 
 @font-face {
     font-family: raleway-c;
-    src: url(../../fonts/raleway-regular.woff2);
+    src: url(../fonts/raleway-regular.woff2);
 }
 
 @font-face {
     font-family: dinpro;
-    src: url(../../fonts/DINPro.woff2);
+    src: url(../fonts/DINPro.woff2);
 }
 
 .wrapper, .content, .what_is_that__textblock, .advantage__card, .main__header, .hero__image > *{
@@ -116,7 +116,7 @@ a {
 }
 
 .image {
-    background-image: url(../../img/main/detailes.png);
+    background-image: url(../img/main/detailes.png);
     width: 100%;
     height: 30rem;
     background-size: cover;
@@ -152,7 +152,7 @@ a {
 .new__image {
     width: 20rem;
     height: 13rem;
-    background-image: url(../../img/main/image-news-1.png);
+    background-image: url(../img/main/image-news-1.png);
     border-radius: 24px;
 }
 
