--- a/css/global.css
+++ b/css/global.css
@@ -18,6 +18,9 @@ body {
     font-family: 'Raleway', sans-serif;
     overflow-x: hidden;
 }
+.app.open {
+  overflow: hidden;
+}
 input, textarea, select {
     font-family: 'Raleway', sans-serif;
     font-variant-numeric: lining-nums proportional-nums;
@@ -25,16 +28,19 @@ input, textarea, select {
 textarea {
     appearance: none;
     resize: none;
+    font-family: 'Raleway', sans-serif;
 }
 ul, ol {
     padding: 0;
     margin: 0;
     list-style: none;
+    font-family: 'Raleway', sans-serif;
 }
 
 a {
     text-decoration: none;
     color: var(--text-accent);
+    font-family: 'Raleway', sans-serif;
 }
 button {
     border: none;
@@ -43,12 +49,14 @@ button {
     padding: 0;
     margin: 0;
     cursor: pointer;
+    font-family: 'Raleway', sans-serif;
 }
 p {
     color: var(--text-add);
     font-size: 18px;
     font-weight: 400;
     line-height: 150%;
+    font-family: 'Raleway', sans-serif;
 }
 
 .btn {
@@ -196,6 +204,34 @@ p {
     opacity: 1;
     -webkit-transform: scale(1);
     transform: scale(1);
+}
+
+.group-form {
+  position: relative;
+}
+.group-form .group-control {
+  width: 100%;
+  color: var(--text-accent);
+  font-variant-numeric: lining-nums proportional-nums;
+  font-family: Raleway;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  border-radius: 10px;
+  background: #F9FAFC;
+  padding: 20px 16px;
+  height: 64px;
+  border: none;
+  transition: .3s;
+}
+
+.group-form .group-control:focus {
+  outline: none;
+  box-shadow: 0 0 1px 2px #118DF0;
+}
+.group-form .group-control::placeholder {
+  color: var(--text-add);
 }
 
 
