--- a/css/borehole.css
+++ b/css/borehole.css
@@ -8,6 +8,7 @@
     background-repeat: no-repeat;
     animation: liquid 8s linear infinite alternate;
     border: none;
+    filter: grayscale(1);
 }
 
 /* Borehole Card */
@@ -192,7 +193,7 @@
     }
 }
 
-@media (max-width: 766px) {
+@media screen and (max-width: 767px) {
     .bore-card {
         padding: 24px;
         height: auto;
@@ -220,6 +221,11 @@
     }
     .advantages .title-main {
         margin-top: 64px;
+    }
+    .borehole-img {
+        width: 100%;
+        height: 300px;
+        margin-top: 32px;
     }
 }
 @keyframes liquid {
