--- a/css/design.css
+++ b/css/design.css
@@ -1,9 +1,29 @@
+.appVideos {
+    position: absolute;
+    top: 0;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden;
+    right: 0;
+    display: flex;
+    align-items: center;
+}
+.appVideos .videoPlayer {
+    width: 80%;
+}
+.appVideos video {
+    position: relative;
+    border-radius: 24px;
+    width: 100%;
+    height: 100%;
+}
+
 .navbar {
     display: none;
 }
 
 .header-edge {
-    background-color: #F3F3F5;
+    /* background-color: #F3F3F5; */
     padding: 16px 0;
     position: fixed;
     width: 100%;
@@ -79,10 +99,21 @@
 }
 
 .hero-block {
+    position: relative;
     height: 100vh;
     display: flex;
     align-items: center;
-    background: linear-gradient(180deg, #F0F1F4 0%, rgba(246, 245, 245, 0.50) 83.33%, #FFF 100%);
+    /* background: linear-gradient(180deg, #F0F1F4 0%, rgb(246 245 245 / 0%) 83.33%, #FFF 100%); */
+    background-color: #eaeaea;
+}
+.hero-block::before {
+    content: '';
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(to bottom, transparent, rgba(255, 255, 255));
+    position: absolute;
+    bottom: 0;
+    z-index: 10;
 }
 
 .hero-text {
@@ -91,6 +122,8 @@
     flex-direction: column;
     justify-content: center;
     height: 100%;
+    z-index: 2;
+    position: relative;
 }
 
 .hero-text h1 {
@@ -595,6 +628,7 @@
 /* Footer */
 .footer {
     padding: 64px 0 24px;
+    background: white;
 }
 
 .footer .footer-logo .footer-adress {
@@ -667,7 +701,7 @@
 }
 
 .btn-back {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     gap: 16px;
     transition: .4s;
@@ -678,6 +712,31 @@
 }
 .btn-back:hover {
     gap: 4px;
+}
+
+/* NEWS */
+.news {
+    padding-top: 128px;
+    background: linear-gradient(180deg, #F0F1F4 0%, rgba(246, 245, 245, 0.50) 46.73%, #FFF 100%);
+}
+.news-info-title {
+    margin-top: 64px;
+}
+.news-info-title span {
+    display: block;
+    margin-bottom: 8px;
+}
+.news-info p {
+    margin-top: 16px;
+}
+.news-info img {
+    margin: 24px 0;
+    width: 100%;
+}
+.news-info h2 {
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
 }
 
 
