--- a/css/calculate.css
+++ b/css/calculate.css
@@ -40,7 +40,7 @@
 
 .more-details {
     margin-top: 32px;
-    width: calc(100% - 364px);
+    width: calc(100% - 200px);
     opacity: 0;
     height: 0;
 }
@@ -53,6 +53,10 @@
     font-size: 24px;
     font-weight: 500;
     margin-bottom: 16px;
+}
+.details-container{
+    display: flex;
+    column-gap: 2rem;
 }
 .details-list li {
     display: flex;
@@ -78,6 +82,11 @@
     font-size: 20px;
     font-weight: 600;
     width: 120px;
+}
+.details-list:nth-child(2){
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
 
 @media screen and (max-width: 767px) {
